# python-projects

./: .gitignore  README.md  ascii-map-test.txt  ascii-map.txt  covid.py  covid_trial_1  data_viz.ipynb  db_search.py  ml_playground.ipynb  monopoly-bank.py  option_pricing.py  py-pandas-dataframe-merge.py  python-rpg.py  query_compare.py  rpg.py  soduko.py  start_screen.py  stockmarket.py  temp.py  temp2.py
apache_kafka/: Dockerfile  Dockerfile.app  Dockerfile.connect  Dockerfile.db  docker-compose.yml  kafka_script  main.py  receive_record.py  requirements.txt  send_record.py  topic_setup.py
cybernetics/: single_valued_transform  single_valued_transform.py  variety.py
db_search/: pyvenv.cfg
django_test/: tips.txt
etl_pipeline/: extract.py  load.py  main.py  transform.py  using-mysql-shell.txt
flask_test/: .gitignore  app.py  requirements.txt  test.db  tips.txt
form_filler/: chocolatey.txt  main.py
fun/: annualized_rate_of_return.py  beijele.py  capsim-temp.py  monopoly_bank.py  new_monopoly.py  page.txt  pageEditor.py  pandas_groupby.py  query_compare.py
general_data/: data_viz.ipynb  exchange_rates_api.py
ml/: .cache-frostcow  covid_trial_3  ml_playground.ipynb  requirements.txt  text_summary.ipynb  wikipedia_nlp.ipynb
osrs/: new_osrs_herbs.ipynb  osrs_herb_prices.ipynb  osrs_potion_arbitrage.ipynb
packaging_tutorial/: README.md  pyproject.toml  setup.cfg
prefect/: datatable_test.py  first_trial.py  prefect_server_setup.txt  requirements.txt
query_builder/: main.py
schemas/: schema_DWH1
song_recommender/: potential_cool_funcs.py  (+1 more)
(+170 files in other folders)
