[metadata]
name = example-pkg-frostcow
version = 0.0.1
author = frostcow
author_email = notareal@email.com
description = My first package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frostcow0/sampleproject
project_urls = 
    Bug Tracker = https://github.com/frostcow0/sampleproject/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src